--- a/public/Il-Gelato.html
+++ b/public/Il-Gelato.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- My style css -->
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./style.css">
 
         <link rel="shortcut icon" href="./media/logo-piccolo.svg" type="image/x-icon">
 
@@ -395,7 +395,6 @@
         </div>
 
         <footer class="container-fluid py-5 bg-footer">
-
             <div class="row">
                 <div class="col-12 text-center">
                     <img src="./media/logo-piccolo.svg" class="my-w-100" alt="">
@@ -406,14 +405,13 @@
                     <p class="mt-4">IlGelato@gmail.com</p>
                 </div>
             </div>
-
         </footer>
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <!-- My Scripts JS -->
-        <script src="/script.js"></script>
+        <script src="./script.js"></script>
 
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="/__/firebase/8.8.0/firebase-app.js"></script>
